# MWEngine

./: README.md
gradle/wrapper/: gradle-wrapper.properties
mwengine/: CMakeLists.txt  build.gradle
mwengine/src/main/cpp/: global.h
mwengine/src/main/cpp/jni/: javautilities.cpp
mwengine_example/: build.gradle
